<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:persistent="false"
    android:title="@string/about_app">

    <PreferenceCategory android:title="@string/about">

        <Preference
            android:summary="@string/developer_name"
            android:title="@string/developer">

			<intent
                android:action="android.intent.action.VIEW"
                android:data="@string/authors_url" />

        </Preference>

        <Preference
            android:key="version"
            android:title="@string/version_number" />

        <Preference
            android:key="licences"
            android:title="@string/open_source_licences" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/special_thanks">

        <Preference
            android:summary="@string/github_desc"
            android:title="@string/github">

			<intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_project_url" />

        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
